--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,27 @@ if (${CMAKE_SYSTEM_NAME} MATCHES Linux)
 endif()
 
 file(GLOB SOURCES "src/*.[ch]")
-add_library(ecdsa SHARED ${SOURCES})
-set_target_properties(ecdsa PROPERTIES PREFIX "")
+python_add_module(ecdsa ${SOURCES})
 target_link_libraries(ecdsa ${RESOLVLIB} ${PYTHON_LIBRARIES} ${OPENSSL_LIBRARIES})
 
+execute_process(
+    COMMAND ${PYTHON_EXECUTABLE} -c "import site, sys; sys.stdout.write(site.PREFIXES[-1])"
+    OUTPUT_VARIABLE PYTHON_PREFIX
+    )
+file(TO_CMAKE_PATH "${PYTHON_PREFIX}" PYTHON_PREFIX)
+message(STATUS "Python prefix is: ${PYTHON_PREFIX}")
+execute_process(
+    COMMAND ${PYTHON_EXECUTABLE} -c "import site, sys; sys.stdout.write(site.getsitepackages()[-1])"
+    OUTPUT_VARIABLE PYTHON_SITE_DIR
+    )
+file(TO_CMAKE_PATH "${PYTHON_SITE_DIR}" PYTHON_SITE_DIR)
+string(REGEX REPLACE "^${PYTHON_PREFIX}/" "" PYTHON_SITE_DIR "${PYTHON_SITE_DIR}")
+message(STATUS "Python site dir is: ${PYTHON_SITE_DIR}")
+install(TARGETS ecdsa LIBRARY DESTINATION ${PYTHON_SITE_DIR} COMPONENT library)
+
+enable_testing()
+add_test(
+    NAME key_test
+    COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_CURRENT_SOURCE_DIR}/tests/test_key.py"
+    WORKING_DIRECTORY ${CMAKE_BUILD_DIR}
+    )
