Installation and tests fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,19 +40,25 @@ file(GLOB SOURCES "src/*.[ch]")
 python_add_module(ecdsa ${SOURCES})
 target_link_libraries(ecdsa ${RESOLVLIB} ${PYTHON_LIBRARIES} ${OPENSSL_LIBRARIES})
 
-execute_process(
-    COMMAND ${PYTHON_EXECUTABLE} -c "import site, sys; sys.stdout.write(site.PREFIXES[-1])"
-    OUTPUT_VARIABLE PYTHON_PREFIX
-    )
-file(TO_CMAKE_PATH "${PYTHON_PREFIX}" PYTHON_PREFIX)
-message(STATUS "Python prefix is: ${PYTHON_PREFIX}")
-execute_process(
-    COMMAND ${PYTHON_EXECUTABLE} -c "import site, sys; sys.stdout.write(site.getsitepackages()[-1])"
-    OUTPUT_VARIABLE PYTHON_SITE_DIR
-    )
-file(TO_CMAKE_PATH "${PYTHON_SITE_DIR}" PYTHON_SITE_DIR)
-string(REGEX REPLACE "^${PYTHON_PREFIX}/" "" PYTHON_SITE_DIR "${PYTHON_SITE_DIR}")
-message(STATUS "Python site dir is: ${PYTHON_SITE_DIR}")
+option(INSTALL_DIR "Relative to prefix directory where to install" "")
+if (NOT INSTALL_DIR)
+    execute_process(
+        COMMAND ${PYTHON_EXECUTABLE} -c "import site, sys; sys.stdout.write(site.PREFIXES[-1])"
+        OUTPUT_VARIABLE PYTHON_PREFIX
+        )
+    file(TO_CMAKE_PATH "${PYTHON_PREFIX}" PYTHON_PREFIX)
+    execute_process(
+        COMMAND ${PYTHON_EXECUTABLE} -c "import site, sys; sys.stdout.write(site.getsitepackages()[-1])"
+        OUTPUT_VARIABLE PYTHON_SITE_DIR
+        )
+    file(TO_CMAKE_PATH "${PYTHON_SITE_DIR}" PYTHON_SITE_DIR)
+    string(REGEX REPLACE "^${PYTHON_PREFIX}/" "" PYTHON_SITE_DIR "${PYTHON_SITE_DIR}")
+    message(STATUS "Python prefix is: ${PYTHON_PREFIX}")
+    message(STATUS "Python site dir is: ${PYTHON_SITE_DIR}")
+else()
+    set(PYTHON_SITE_DIR "${INSTALL_DIR}")
+endif()
+
 install(TARGETS ecdsa LIBRARY DESTINATION ${PYTHON_SITE_DIR} COMPONENT library)
 
 enable_testing()
@@ -61,3 +67,4 @@ add_test(
     COMMAND ${PYTHON_EXECUTABLE} "${CMAKE_CURRENT_SOURCE_DIR}/tests/test_key.py"
     WORKING_DIRECTORY ${CMAKE_BUILD_DIR}
     )
+set_tests_properties(key_test PROPERTIES ENVIRONMENT PYTHONPATH=${CMAKE_BUILD_DIR})
